tests/testerina-integration-test/src/test/resources/command-outputs/windows/MockTest-testObjectMocking_NegativeCases2.txt
Compiling source
	intg_tests/object_mocking:0.0.0
WARNING [modules\TestHttpClient\main.bal:(54:45,54:82)] this function should explicitly return a value (BCE20350)
   |
54 |     public isolated function next() returns record {|AttributeDAO value;|}|Error? {
   |                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

WARNING [main.bal:(47:5,47:47)] unused variable 'closeErr' (BCE20403)
   |
47 |     error? closeErr = attributeStream.close();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Running Tests with Coverage

	object_mocking

testDefaultInvalidMemberReturnValue has failed.


		Test execution time :*****ms


		[fail] testDefaultInvalidMemberReturnValue:

		    error {ballerina/test:0}InvalidMemberFieldError ("return value provided does not match the type of 'url'")
				callableName: thenReturnExt moduleName: ballerina.test.0 fileName: mock.bal lineNumber: 355
				callableName: thenReturn moduleName: ballerina.test.0.MemberVariableStub fileName: mock.bal lineNumber: 212
				callableName: testDefaultInvalidMemberReturnValue moduleName: intg_tests.object_mocking$test.0.tests.main_error_test fileName: tests/main_error_test.bal lineNumber: 74
				callableName: testDefaultInvalidMemberReturnValue$lambda5$ moduleName: intg_tests.object_mocking$test.0.tests.test_execute-generated_*****lineNumber: 9
			


		0 passing
		1 failing
		0 skipped

Generating Test Report*****project-based-tests\object-mocking-tests\target\report\test_results.json

error: there are test failures
